lib/tests/fixtures/compiler/parser/break_in_class.baseline
Error: break_in_class.pp:3:9: break statement cannot be used inside a class.
  break
  ^~~~~
