lib/tests/fixtures/compiler/parser/break_in_class.pp
class foo() {
    if true {
        break
    }
}
